<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.StoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/uploadImageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_in_a_flash"
            android:textSize="26sp"
            android:textColor="@color/Midnight_red"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/uploadImageText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seamless_story_sharing_effortlessly_share_your_moments"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="2dp"/>

        <LinearLayout
            android:id="@+id/layoutContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border_input"
            android:padding="20dp"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/prevuploadImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/bg_previewimage"
                android:scaleType="fitXY"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/cameraButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/Midnight_red"/>

                <Button
                    android:id="@+id/galleryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/Midnight_red"/>

            </LinearLayout>

            <EditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_input"
                android:padding="16dp"
                android:hint="@string/add_a_caption"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLines="4"
                android:scrollbars="vertical"/>

            <Button
                android:id="@+id/button_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                android:backgroundTint="@color/Midnight_red"
                android:layout_marginTop="16dp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/Midnight_red_dark"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
