<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="561dp"
                android:layout_marginTop="100dp">

                <TextView
                    android:id="@+id/profile_image"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="124dp"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:textSize="64sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:background="@drawable/border_input"
                    android:text="@string/ab"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/et_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/user_gmail_com"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_email">


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_maps"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/location"
                        android:textAlignment="viewStart"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:icon="@drawable/ic_maps" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_language"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/language"
                        android:textAlignment="viewStart"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:icon="@drawable/ic_photo" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/action_logout"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/Midnight_red"
                        android:text="@string/logout"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
